--- a/html/www/html/sidebar.html
+++ b/html/www/html/sidebar.html
@@ -18,7 +18,7 @@
     <div class="user-panel">
         <div class="pull-left info">
             <div class="pull-left info">
-                <h6><span class="label label-primary" data-18n="your_account">Your Account</span></h6>
+                <h6><span class="label label-primary" data-18n="your_account">YOUR ADDRESS</span></h6>
                 <div class="badge-active" style="padding:3px;margin-bottom:5px;font-size:12px" id="sidebar_account_id"></div>
                 <div style="margin-bottom:5px;">
                     <span><a class='btn btn-default btn-xs' href="#" id="account_name" data-toggle="modal" data-target="#account_info_modal" data-i18n="set_account_info">Set Account Info</a></span>
@@ -43,14 +43,14 @@
                     </div>
                 </div>
                 <div style="margin-bottom:8px;">
-                    <a href="#" data-page="peers" id="connected_indicator" class="connected goto-page" style="display:none;font-size:13px;" data-toggle="tooltip" data-placement="top" title="CONNECTION" data-i18n="[title]server_connection_status"><i class="fa fa-circle" style="font-size:12px;"></i> <span data-18n="connected">Connected</span></a>
+                    <a href="#" data-page="peers" id="connected_indicator" class="connected goto-page" style="display:none;font-size:13px;" data-toggle="tooltip" data-placement="top" title="NODE STATUS" data-i18n="[title]server_connection_status"><i class="fa fa-circle" style="font-size:12px;"></i> <span data-18n="connected">Connected</span></a>
                     <a href="#" id="forging_indicator" class="forging" data-toggle="tooltip" title="" data-placement="bottom" style="display:none;font-size:13px;">
                         <i class="fa fa-circle" style="font-size:12px;"></i> <span data-18n="forging">Forging</span>
                     </a>
                 </div>
                 <div class="input-group" style="margin-bottom:5px;">
                     <span data-i18n="height">HEIGHT</span>
-                    <span class="badge-active" style="padding:3px;" id="sidebar_block_link" data-toggle="tooltip" data-placement="bottom" title="HEIGHT" data-i18n="[title]current_blockchain_height"></span>
+                    <span class="badge-active" style="padding:3px;" id="sidebar_block_link" data-toggle="tooltip" data-placement="bottom" title="BLOCK HEIGHT" data-i18n="[title]current_blockchain_height"></span>
                 </div>
             </div>
         </div>
