--- a/html/www/html/lockscreen.html
+++ b/html/www/html/lockscreen.html
@@ -51,7 +51,7 @@
                     	<div class="input-group" id="login_account_container" style="display:table;height:34px;width: 100%;">
                             <div class="dropdown" style="width: 100%;">
                                 <button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-expanded="true" style="width: 100%;">
-                                    <span data-i18n="select_account_to_login">Select an Account to Login with</span>
+                                    <span data-i18n="select_account_to_login">Select Account</span>
                                     <span class="caret"></span>
                                 </button>
                                 <ul class="dropdown-menu" role="menu" aria-labelledby="dropdownMenu1" id="login_account">
@@ -110,7 +110,7 @@
                 </div>
 
                 <div id="registration_link">
-                    <a href="#" onclick="NRS.registerAccount();" data-i18n="no_account_q_create_account">Don't have an account? Click here to create one!</a>
+                    <a href="#" onclick="NRS.registerAccount();" data-i18n="no_account_q_create_account">REGISTER HERE!</a>
                 </div>
             </div>
 
@@ -245,7 +245,7 @@
             </div>
 
             <div id="custom_passphrase_link">
-                <a href="#" onclick="NRS.registerUserDefinedAccount();" data-i18n="choose_own_passphrase">Want to choose your own passphrase? Click here.</a>
+                <a href="#" onclick="NRS.registerUserDefinedAccount();" data-i18n="choose_own_passphrase">Create your own passphrase? Click here.</a>
             </div>
         </td>
         </tr>
