--- a/html/www/html/sidebar_context.html
+++ b/html/www/html/sidebar_context.html
@@ -36,18 +36,18 @@
 
 <div id="messages_sidebar_context" class="context_menu dropdown clearfix">
     <ul class="dropdown-menu" data-container="body" role="menu" style="display:block;position:static;margin-bottom:5px;">
-        <li><a tabindex="-1" href="#" data-option="account_info" data-i18n="account_info">Account Info</a></li>
-        <li><a tabindex="-1" href="#" data-option="add_contact" data-i18n="add_contact">Add Contact</a></li>
+        <li><a tabindex="-1" href="#" data-option="account_info" data-i18n="account_info">ACCOUNT INFO</a></li>
+        <li><a tabindex="-1" href="#" data-option="add_contact" data-i18n="add_contact">ADD NEW CONTACT</a></li>
         <li><a tabindex="-1" href="#" data-option="send_nxt">
-            <span data-i18n="send">Send</span> <span class="coin-symbol"></span>
+            <span data-i18n="send">SEND</span> <span class="coin-symbol"></span>
         </a></li>
     </ul>
 </div>
 
 <div id="messages_sidebar_update_context" class="context_menu dropdown clearfix">
     <ul class="dropdown-menu" data-container="body" role="menu" style="display:block;position:static;margin-bottom:5px;">
-        <li><a tabindex="-1" href="#" data-option="account_info" data-i18n="account_info">Account Info</a></li>
-        <li><a tabindex="-1" href="#" data-option="update_contact" data-i18n="update_contact">Update Contact</a></li>
+        <li><a tabindex="-1" href="#" data-option="account_info" data-i18n="account_info">ACCOUNT INFO</a></li>
+        <li><a tabindex="-1" href="#" data-option="update_contact" data-i18n="update_contact">ADD NEW CONTACT</a></li>
         <li><a tabindex="-1" href="#" data-option="send_nxt">
             <span data-i18n="send">Send</span> <span class="coin-symbol"></span>
         </a></li>
@@ -57,7 +57,7 @@
 <div id="downloading_blockchain">
     <div class="db_active">
         <div style="font-weight:bold;margin-bottom:5px;">
-            <span data-i18n="downloading_blockchain">Downloading blockchain</span> 
+            <span data-i18n="downloading_blockchain">DOWNLOADING BLOCKCHAIN</span> 
             <span class="blocks_left_outer" style="display:none;">(<span class="blocks_left"></span>)</span>
         </div>
         <div class="db_progress_total">
@@ -78,13 +78,13 @@
         </div>
     </div>
     <div class="db_halted" style="display:none;text-align:center;font-weight:bold;">
-        <span data-i18n="blockchain_download_halted">Blockchain download halted</span>,<br>
-        <span data-i18n="no_connection">no connection</span>
+        <span data-i18n="blockchain_download_halted">BLOCKCHAIN DOWNLOAD STOPPED</span>,<br>
+        <span data-i18n="no_connection">NO CONNECTION</span>
     </div>
 </div>
 
 <div id="testnet_warning" onclick="this.setAttribute('class', 'testnet-collapse');">
-    <strong><span data-i18n="warning">Warning</span>:</strong>
+    <strong><span data-i18n="warning">WARNING</span>:</strong>
     <span data-i18n="testnet_warning">You are connected to the TestNet. Do not use your real passphrase!</span>
 </div>
 
