--- a/html/www/html/sidebar_context.html
+++ b/html/www/html/sidebar_context.html
@@ -24,13 +24,13 @@
 
 <div id="followed_polls_sidebar_context" class="context_menu dropdown clearfix">
     <ul class="dropdown-menu" data-container="body" role="menu" style="display:block;position:static;margin-bottom:5px;">
-        <li><a tabindex="-1" href="#" data-option="remove_from_bookmarks" data-i18n="remove_from_bookmarks">Remove From Bookmarks</a></li>
+        <li><a tabindex="-1" href="#" data-option="remove_from_bookmarks" data-i18n="remove_from_bookmarks">REMOVE FROM BOOKMARKS</a></li>
     </ul>
 </div>
 
 <div id="asset_exchange_sidebar_group_context" class="context_menu dropdown clearfix">
     <ul class="dropdown-menu" data-container="body" role="menu" style="display:block;position:static;margin-bottom:5px;">
-        <li><a tabindex="-1" href="#" data-option="change_group_name" data-i18n="change_group_name">Change Group Name</a></li>
+        <li><a tabindex="-1" href="#" data-option="change_group_name" data-i18n="change_group_name">CHANGE GROUP NAME</a></li>
     </ul>
 </div>
 
@@ -49,7 +49,7 @@
         <li><a tabindex="-1" href="#" data-option="account_info" data-i18n="account_info">ACCOUNT INFO</a></li>
         <li><a tabindex="-1" href="#" data-option="update_contact" data-i18n="update_contact">ADD NEW CONTACT</a></li>
         <li><a tabindex="-1" href="#" data-option="send_nxt">
-            <span data-i18n="send">Send</span> <span class="coin-symbol"></span>
+            <span data-i18n="send">SEND</span> <span class="coin-symbol"></span>
         </a></li>
     </ul>
 </div>
@@ -61,7 +61,7 @@
             <span class="blocks_left_outer" style="display:none;">(<span class="blocks_left"></span>)</span>
         </div>
         <div class="db_progress_total">
-            <span data-i18n="total">Total</span>:
+            <span data-i18n="total">TOTAL</span>:
             <div class="progress sm" style="margin-bottom:5px;margin-top:5px;">
                 <div class="progress-bar progress-bar-success" role="progressbar" aria-valuemin="0" aria-valuemax="100" style="width: 0%;">
                     <span class="sr-only">0% Complete</span>
